<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/Output_View"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text=""
        android:textSize="48sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/ac"
            android:textSize="25sp"
            app:cornerRadius="28dp"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/TopRow_Color"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/PlusMinus"
            android:textSize="24sp"
            app:cornerRadius="28dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/TopRow_Color"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/Divide"
            android:textSize="25sp"
            app:cornerRadius="28dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/TopRow_Color"/>


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/Percentage"
            android:textSize="25sp"
            app:cornerRadius="28dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/RightMost_Col_Color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/Seven"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_8"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_9"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/Multiply"
            android:textSize="29sp"
            android:backgroundTint="@color/RightMost_Col_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_4"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_5"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:text="@string/_6"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:text="@string/Minus"
            android:backgroundTint="@color/RightMost_Col_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:text="@string/_1"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_2"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_3"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/Plus"
            android:textSize="29sp"
            app:cornerRadius="28dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/RightMost_Col_Color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="177dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/_0"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/decimal"
            android:textSize="25sp"
            android:backgroundTint="@color/Num_Btn_Color"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="78dp"
            android:layout_height="77dp"
            android:layout_margin="10dp"
            android:text="@string/equal_to"
            android:textSize="28sp"
            app:cornerRadius="28dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/RightMost_Col_Color"/>

    </LinearLayout>

</LinearLayout>